# Clawffee

./: .gitignore  CONTRIBUTING.md  Clawffee_CONTRIBUTING.md  Clawffee_Requirements.md  Clawffee_Roadmap_v1.0_to_v1.1.md  Clawffee_v1_MVP_Spec.md  Clawffee_v1_Repo_Skeleton_and_Interfaces.md  Clawffee_v1_Security_Inspector_MVP.md  OPENCLAW_UPSTREAM.md  README.md  openclaw_plugin.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: branch-name-policy.yml  ci.yml
brand/: BRAND_GUIDE.md  COLORS.json  README.md
docs/: Clawffee_MVP_Spec.md  Clawffee_PDR.md  Clawffee_Repo_Structure_and_Interfaces.md  Clawffee_Requirements.md  README.md
docs/context/: OPENCLAW_SKILL_STRATEGY_EXTRACTED.md  THREAD_CONTEXT_AND_DECISIONS_2026-02-16.md
docs/decisions/: ADR-001-Brand-And-Positioning.md  ADR-002-Product-Sequence.md
docs/process/: MAINTAINER_MERGE_CHECKLIST.md
docs/project/: IMPLEMENTATION_BACKLOG.md
docs/research/: COMPETITIVE_NOTES_CLAWFFEE_NAME.md
docs/specs/: OPENCLAW_ALIGNMENT_NOTES.md  PDR_SECURITY_AND_OPTIMIZER_ROADMAP.md  REQUIREMENTS_SECURITY_INSPECTOR_V1.md  REQUIREMENTS_TOKEN_OPTIMIZER_V1_1.md
plugins/: __init__.py
plugins/clawffee/: __init__.py  security_inspector_operator.py
scripts/: fetch-openclaw.sh
src/clawffee/: __init__.py  cli.py  models.py  openclaw_adapter.py  reporting.py  security_inspector.py
tests/: conftest.py  test_openclaw_adapter.py  test_openclaw_operator.py  test_reporting.py  test_security_inspector.py
