[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawffee"
version = "0.1.0"
description = "Local-first security inspector and skill vetting toolkit for OpenClaw ecosystems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Clawffee Contributors" }
]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
clawffee = "clawffee.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
